--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                <p>Il programma consiste in un torneo Capture The Flag, costituito da vari eventi selezionati tra le gare internazionali a disposizione. Al torneo potranno partecipare tutte le squadre (senza limiti al numero di partecipanti) che si iscriveranno, incluse quelle di nuova costituzione. La competizione sarà caratterizzata da un <a href="scoreboard.html">ranking</a> delle squadre, il punteggio dipende dalle performance ad ogni gara selezionata. Gli eventi di CyberCup verranno accuratamente scelti in accordo alla qualità e al livello di difficoltà da un comitato tecnico. Avranno maggiore priorità le competizioni organizzate da università e da squadre CTF italiane. Gli eventi avranno una difficoltà bilanciata in modo da accogliere sia squadre con poca esperienza che quelle più preparate.</p>
            </div>
          </div>
+
+         <div class="container">
+          <div class="row align-items-center text-center">
+               <h2>Struttura del torneo</h2>
+               <p>CyberCup inizia ad Ottobre 2023 e termina a Giugno 2024. Verrà svolta una gara al mese.</p>
+               <p>I team saranno divisi in due categorie: Junior e Senior. Sarà presente una classifica generale ed una classifica solo per i team Junior. I team Junior potranno partecipare ad entrambe le classifiche. </p>
+           </div>
+         </div>
            <div class="container-fluid text-center" style="background-color: #e3f2fd;">
           <div class="jumbotron jumbotron-fluid justify-content-center">
             <hr class="my-4">
@@ -86,35 +94,9 @@
         </div>
         <div class="container">
            <div class="row align-items-center text-left">
-            <!--
                <h2 class="text-center">Punteggio</h2>
-               <ul style="list-style-type: square;">
                 <p>I punteggi saranno calcolati basandosi sulla posizione nella classifica globale</p>
-                <p>La classifica sarà organizzata secondo i seguenti parametri:</p>
-                <li>Competizioni di tipo Jeopardy</li>
-                <p>Le squadre che si classificano come prime, seconde e terze italiane riceveranno un bonus rispettivamente di 5, 3 e 1 punti</p>
-                <ul>
-                  <li>1° Classificato: 50 punti</li>
-                  <li>2°/5° Classificati: 45 punti</li>
-                  <li>6°/10° Classificati: 40 punti</li>
-                  <li>11°/20° Classificati: 35 punti</li>
-                  <li>21°/50° Classificati: 25 punti</li>
-                  <li>51°/100° Classificati: 15 punti</li>
-                  <li>Risoluzione di almeno una challenge oltre quella di benvenuto: 5 punti</li>
-                  <li>Risoluzione della challenge benvenuto: 1 punto</li>
-                </ul>
-                <li>Competizioni di tipo Attack/Defense</li>
-                <ul>
-                  <li>1° Classificato: 100 punti</li>
-                  <li>2°/3° Classificati: 80 punti</li>
-                  <li>4°/5° Classificati: 70 punti</li>
-                  <li>6°/10° Classificati: 60 punti</li>
-                  <li>11°/20° Classificati: 50 punti</li>
-                  <li>21°/50° Classificati: 30 punti</li>
-                  <li>51°/100° Classificati: 10 punti</li>
-                  <li>Conquista di almeno una flag: 5 punti</li>
-                  <li>Partecipazione: 1 punto</li>
-                </ul>
+                <p>Dal 1° classificato i punteggi decrementeranno in maniera proporzionale fino ad arrivare alla posizione 100°, oltre cui il punteggio sarà sempre pari a 15 apprescindere dalla posizione in classifica</p>
                 <li>Peso delle competizioni</li>
                 <p>Il peso delle competizioni sarà determinato in base al numero di team iscritti. Se il numero di partecipanti che hanno preso almeno la challenge di benvenuto è inferiore al numero di soglia per applicazione del punteggio, il punteggio di classifica non si applica. Le competizioni avranno un peso, applicato al punteggio di classifica, in base al numero di partecipanti.</p>
                 <ul>
@@ -123,7 +105,6 @@
                   <li>Peso 0.5 se gli iscritti sono tra i 20 e i 49</li>
                   <li>Peso 0.25 se gli iscritti sono meno di 20</li>
                 </ul>
-               </ul> -->
            </div>
         </div>
 <footer class="bg-light text-center text-lg-start">
